Стандарт java11 + исправленный код